# estrutura_projeto_dados

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
about/: index.html
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: about.md  index.md
docs/pipeline/: extract.md  load.md  transform.md
pipeline/extract/: index.html
pipeline/load/: index.html
pipeline/transform/: index.html
search/: search_index.json
site/: 404.html  index.html
site/about/: index.html
site/pipeline/extract/: index.html
site/pipeline/load/: index.html
tests/: test_pipeline.py
