[tool.poetry]
name = "estrutura-projeto-dados"
version = "0.1.0"
description = "Como estruturar um projeto de dados"
authors = ["Luiz Fernando <luizfsoliveira.lm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
